@@ -6,6 +6,9 @@ Unattributed items are by Paul Warren and Chris Lightfoot.
 
 1.0
 
+* Support looking up connection mappings in Linux conntrack table
+    Luke Dashjr <luke+iftop@dashjr.org>
+
 * Choose first running interface, rather than first "up" interface (Redhat #1403025)
     Robert Scheck <robert@fedoraproject.org>
 
